-*- text -*-

Version 0.7 (2015-11-13)
-----------

* flexsurvspline now allows the log cumulative hazard (or its
  alternatives) to be modelled as a spline function of time instead of
  log time.

* The routine for generating initial values in flexsurvspline has been
  improved.  This now obeys the constraint that the log cumulative
  hazard is increasing, thus avoiding errors from optim() when this
  wasn't satisfied.  Cox regression is used as a fallback to
  initialise covariate effects if this fails.

* As a result, flexsurv now depends on the "quadprog" package.

* dweibullPH and related functions give the Weibull distribution in
  proportional hazards parameterisation, and "weibullPH" is supported
  as a built-in model for flexsurvreg.

* Option to summary.flexsurvreg to return a tidy data frame.

* New "logliki" component in model objects, containing vector of
  log-likelihoods for each observation at the estimated or fixed
  parameters.

* Fix of various bugs with supplying "newdata" to summary functions
  (github issue #7).  The behaviour here should now be like predict.lm,
  e.g. variables in newdata that were originally factors should be
  supplied as factor or character, not numeric.
  
* Fix of bug that prevented plots being drawn by categorical
  covariates by default.

* Fix of bugs with spline models and no data censored, or all data
  interval censored (github issue #3).

* Fix of bugs with subsetting in flexsurvspline (github issue #6).


Version 0.6 (2015-04-13) 
-----------

* CRAN release.  Also includes the changes from Version 0.5.1. 

* Full support for multi-state models fitted as a list of
  independent transition-specific models.

* New function pars.fmsm to return transition-specific parameters in
  multi-state models.

* Bug fix for empirical hazard plots with categorical covariates.
  Thanks to Milan Bouchet-Valat.


Version 0.5.1 (2015-02-24)
-------------

* github-only release.
